plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.10.1"
}

group = "github.tdonuk"
version = "1.0.4"

repositories {
    mavenCentral()
}

dependencies {
    // Other dependencies
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2")
}

// Configure Gradle IntelliJ Plugin
// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
intellij {
    version.set("2023.1")
    type.set("IC") // Target IDE Platform

    plugins.set(listOf("com.intellij.java"))

    updateSinceUntilBuild.set(false);
}

tasks {
    // Set the JVM compatibility versions
    withType<JavaCompile> {
        sourceCompatibility = "8"
        targetCompatibility = "8"
    }

    signPlugin {
        certificateChain.set(System.getenv("CERTIFICATE_CHAIN"))
        privateKey.set(System.getenv("PRIVATE_KEY"))
        password.set(System.getenv("PRIVATE_KEY_PASSWORD"))
    }

    publishPlugin {
        token.set(System.getenv("PUBLISH_TOKEN"))
    }
}
